front - fix transport table mobile overflow

--- a/front/src/dashboard/transport/Transport.scss
+++ b/front/src/dashboard/transport/Transport.scss
@@ -5,3 +5,7 @@
 table .icon {
   font-size: larger;
 }
+
+.transport-table {
+  overflow-y: auto;
+}
